examples/pos/box_interface.effekt
module box_interface

interface Fresh {
  def fresh(): String
}

def create(): Fresh at {} =
  box new Fresh { def fresh() = "" }

def main() = ()
