examples/neg/must_box_function.effekt
module must_box_function

def toString(): String = ""
def main() = {
  println(toString)
}